--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eleventy-sample",
+  "name": "cynsite-temp",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,8 +7,9 @@
     "start": "eleventy --serve --watch",
     "build": "eleventy"
   },
-  "styles": { 
-    "css/index.css"
+  "repository": { 
+    "type": "git",
+    "url": "https://github.com/Cynler/cynlet.com"
   },
   "keywords": [],
   "author": "Cynthia Lu",
