--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "eleventy --serve --watch",
     "build": "eleventy"
   },
-  "repository": { 
+  "repository": {
     "type": "git",
     "url": "https://github.com/Cynler/cynlet.com"
   },
@@ -15,7 +15,8 @@
   "author": "Cynthia Lu",
   "license": "ISC",
   "devDependencies": {
-    "@11ty/eleventy": "^0.10.0"
+    "@11ty/eleventy": "^0.10.0",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.1"
   },
   "dependencies": {
     "core-js": "^3.6.4"
